--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edge-impulse-linux",
-  "version": "1.2.0",
+  "version": "1.2.5",
   "description": "Node.js SDK and tools for Edge Impulse for Linux",
   "directories": {
     "example": "examples"
@@ -41,6 +41,7 @@
     "socket.io": "^2.3.0",
     "tiny-async-pool": "^1.1.0",
     "tsee": "^1.3.0",
+    "typed-emitter": "^1.3.1",
     "wavefile": "^11.0.0",
     "ws": "^7.2.0"
   },
