--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../.eslintrc.json",
     "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint", "@stylistic/ts"],
     "rules": {
         "@typescript-eslint/no-var-requires": "off"
     },
