--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "ws": "7.5.10"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin-ts": "2.1.0",
+    "@stylistic/eslint-plugin": "2.8.0",
     "@types/cbor": "5.0.0",
     "@types/commander": "2.12.2",
     "@types/express": "4.17.13",
