--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edge-impulse-linux",
-  "version": "1.8.10",
+  "version": "1.9.0",
   "description": "Node.js SDK and tools for Edge Impulse for Linux",
   "directories": {
     "example": "examples"
@@ -11,7 +11,8 @@
     "fast-lint": "oxlint --symlinks -c ../../.eslintrc.json -A unicorn --deny-warnings --tsconfig ./tsconfig.json .",
     "lint": "npm run fast-lint && npm run eslint",
     "test": "tsc -b . && TS_NODE_PROJECT=./tsconfig.json mocha --config ./test/.mocharc.js",
-    "watch-runner": "func() { tsc-watch -b . --onSuccess \"node build/cli/linux/runner.js $1\" --noClear; }; func"
+    "watch-runner": "func() { tsc-watch -b . --onSuccess \"node build/cli/linux/runner.js $1\" --noClear; }; func",
+    "verify-build": "echo \"import { EdgeImpulseApi } from './build/sdk/studio/index.js'\" | node --input-type=module && [ $(find ./build/sdk -type f | wc -l) -gt 50 ]"
   },
   "bin": {
     "edge-impulse-linux": "build/cli/linux/linux.js",
@@ -35,7 +36,7 @@
     "borc": "2.1.2",
     "cbor": "5.0.2",
     "commander": "4.1.1",
-    "express": "4.17.3",
+    "express": "4.21.0",
     "form-data": "4.0.0",
     "inquirer": "7.0.0",
     "jpeg-js": "0.4.4",
@@ -56,7 +57,7 @@
     "@stylistic/eslint-plugin": "2.8.0",
     "@types/cbor": "5.0.0",
     "@types/commander": "2.12.2",
-    "@types/express": "4.17.13",
+    "@types/express": "4.17.21",
     "@types/inquirer": "6.5.0",
     "@types/mocha": "9.0.0",
     "@types/multer": "1.4.11",
@@ -76,5 +77,17 @@
     "ts-node": "10.9.2",
     "tsc-watch": "6.2.0",
     "typescript": "4.9.5"
-  }
+  },
+  "files": [
+    "LICENSE",
+    "README.md",
+    "build/",
+    "!build/test/",
+    "!build/examples/",
+    "package*.json",
+    "examples/",
+    "test/",
+    "borc/",
+    "utypes.d.ts"
+  ]
 }
