--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edge-impulse-linux",
-  "version": "1.9.0",
+  "version": "1.10.3",
   "description": "Node.js SDK and tools for Edge Impulse for Linux",
   "directories": {
     "example": "examples"
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "./node_modules/.bin/tsc -p .",
     "eslint": "tsc -b . && eslint . -c .eslintrc.json --ext .ts,.js",
-    "fast-lint": "oxlint --symlinks -c ../../.eslintrc.json -A unicorn --deny-warnings --tsconfig ./tsconfig.json .",
+    "fast-lint": "oxlint --symlinks -c ../../.eslintrc.json --quiet --tsconfig ./tsconfig.json .",
     "lint": "npm run fast-lint && npm run eslint",
     "test": "tsc -b . && TS_NODE_PROJECT=./tsconfig.json mocha --config ./test/.mocharc.js",
     "watch-runner": "func() { tsc-watch -b . --onSuccess \"node build/cli/linux/runner.js $1\" --noClear; }; func",
@@ -32,6 +32,9 @@
   },
   "homepage": "https://github.com/edgeimpulse/linux-sdk-node#readme",
   "dependencies": {
+    "@aws-sdk/client-iot-data-plane": "3.624.0",
+    "@aws-sdk/client-secrets-manager": "3.624.0",
+    "@types/uuid": "10.0.0",
     "async-mutex": "0.2.6",
     "borc": "2.1.2",
     "cbor": "5.0.2",
@@ -39,18 +42,14 @@
     "express": "4.21.1",
     "form-data": "4.0.0",
     "inquirer": "7.0.0",
-    "jpeg-js": "0.4.4",
     "multer": "1.4.5-lts.1",
     "node-fetch": "2.6.7",
     "npm-registry-fetch": "5.0.0",
     "request": "2.88.0",
-    "request-promise": "4.2.4",
     "sharp": "0.32.6",
     "socket.io": "2.5.1",
-    "tiny-async-pool": "1.1.0",
     "tsee": "1.3.4",
     "typed-emitter": "1.3.1",
-    "wavefile": "11.0.0",
     "ws": "7.5.10"
   },
   "devDependencies": {
@@ -64,16 +63,15 @@
     "@types/node": "20.14.14",
     "@types/npm-registry-fetch": "4.0.1",
     "@types/request": "2.48.3",
-    "@types/request-promise": "4.1.45",
     "@types/sharp": "0.32.0",
     "@types/socket.io": "2.1.4",
-    "@types/tiny-async-pool": "1.0.0",
     "@types/ws": "6.0.4",
     "@typescript-eslint/eslint-plugin": "7.12.0",
     "@typescript-eslint/parser": "7.12.0",
     "eslint": "8.57.0",
-    "oxlint": "0.5.2",
+    "eslint-plugin-mocha": "10.5.0",
     "mocha": "9.2.2",
+    "oxlint": "0.12.0",
     "ts-node": "10.9.2",
     "tsc-watch": "6.2.0",
     "typescript": "4.9.5"
@@ -81,6 +79,7 @@
   "files": [
     "LICENSE",
     "README.md",
+    "cli/linux/webserver/public",
     "build/",
     "!build/test/",
     "!build/examples/",
