--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edge-impulse-linux",
-  "version": "1.16.1",
+  "version": "1.17.6",
   "description": "Node.js SDK and tools for Edge Impulse for Linux",
   "directories": {
     "example": "examples"
@@ -42,6 +42,7 @@
     "form-data": "4.0.4",
     "inquirer": "7.0.0",
     "inquirer-search-list": "1.2.6",
+    "koffi": "2.12.1",
     "multer": "1.4.5-lts.1",
     "node-fetch": "2.7.0",
     "npm-registry-fetch": "17.1.0",
